# Simplex

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
files/results/circle/: barcode.csv  points.csv
files/results/figure8/: barcode.csv  points.csv
files/results/sphere/: barcode.csv  points.csv
files/results/torus/: barcode.csv  points.csv
include/: default.h  static_for.h
src/compute/: CMakeLists.txt  column.h  compute.cpp  compute.h  point.h  reader.cpp  reader.h  simplex.h
src/datagen/: generate.py
src/frontend/: CMakeLists.txt  camera.h  frontend.cpp  frontend.h  shaders.inl
src/plot/: plot.py
src/simplex/: CMakeLists.txt  compute.cpp  compute.h  reader.cpp  simplex.cpp  simplex.h
